--- a/Halloapp/nl.lproj/Localizable.strings
+++ b/Halloapp/nl.lproj/Localizable.strings
@@ -43,6 +43,9 @@
 /* First tab in the main app interface. */
 "activityCenter.promo.favorites" = "Probeer de nieuwe functie Favorieten!";
 
+/* Title of a button to send a friend request. */
+"add.friend" = "Vriend toevoegen";
+
 /* Title of a button that allows a location to be added. */
 "add.location.title" = "Locatie Toevoegen";
 
@@ -56,7 +59,7 @@
 "add.to.favorites.title" = "Toevoegen aan Favorieten";
 
 /* Confirmation when a user was successfully added to favorites. */
-"added.user.to.favorites" = "%@ toegevoegd aan favorieten";
+"added.user.to.favorites" = "Toegevoegd aan favorieten";
 
 /* Title for alert shown when there's no internet connectivity */
 "alert.no.internet.title" = "Geen Internetverbinding";
@@ -111,6 +114,13 @@
 
 /* Text to show on banner when no connection is available */
 "banner.no.connection" = "Geen Verbinding";
+
+/* Failure message displayed after trying to block a user.
+   Success message displayed after blocking a user. */
+"block.success" = "Geblokkeerd";
+
+/* Title of an alert when blocking a user. */
+"block.title" = "Blokkeer %@";
 
 /* Title for generic Add button. Used to add more items to current selection (e.g., add more members to a group) */
 "button.add" = "Toevoegen";
@@ -300,6 +310,9 @@
 
 /* No comment provided by engineer. */
 "Cancel" = "Annuleren";
+
+/* Title of a button to cancel a friendship request. */
+"cancel.request" = "Verzoek annuleren";
 
 /* Text shown in the chat interface informing the user that the contact is blocked */
 "chat.blocked.contact.label" = "Je hebt dit contact geblokkeerd";
@@ -887,10 +900,16 @@
 "feed.privacy.value.n.selected" = "feed.privacy.value.n.selected";
 
 /* Body text of welcome post shown to users who have no contacts and no content (zero zone) in their feed */
-"feed.welcome.post.body" = "Gebruik je telefoonnummer om je te verbinden met vrienden & familie in een ruimte zonder advertenties, zonder merken, zonder likes en zonder influencers.\n\nHalloApp is voor jou en degenen die het dichtst bij je staan, volledig in privé. Nodig je echte vrienden uit om te beginnen!";
+"feed.welcome.post.body.1" = "Een privéruimte zonder influencers en zonder advertenties. Alleen jij en de mensen om wie je geeft";
+
+/* Body text of welcome post shown to users who have no contacts and no content (zero zone) in their feed */
+"feed.welcome.post.body.2" = "Je vrienden op HalloApp kunnen je posts zien. Voeg vrienden uit je netwerk toe en beheer vriendschapsverzoeken.";
 
 /* Title of welcome post shown to users who have no contacts and no content (zero zone) in their feed */
-"feed.welcome.post.title" = "Welkom bij HalloApp, een digitale ruimte voor echte relaties ✨";
+"feed.welcome.post.title.1" = "Welkom bij HalloApp! Je privé sociale netwerk";
+
+/* Title of welcome post shown to users who have no contacts and no content (zero zone) in their feed */
+"feed.welcome.post.title.2" = "Wie kan mijn posts zien?";
 
 /* Text for 'more' cell prompting users to open the invite screen */
 "feedInviteCarousel.searchPrompt" = "Zoek naar meer vrienden en familie";
@@ -930,6 +949,9 @@
 
 /* Indicating the user's friends. */
 "friends.title" = "Vrienden";
+
+/* When displaying a generic error message. */
+"generic.error" = "Er is een fout opgetreden";
 
 /* Placeholder text shown in group description input box when there's no description */
 "group.add.description" = "Groepsomschrijving toevoegen";
@@ -1170,6 +1192,12 @@
 
 /* Title of failed video call screen alert. */
 "home.video.calls.fail.title" = "Video-oproepen worden op dit moment niet ondersteund.";
+
+/* Title of a button to ignore a friendship request. */
+"ignore.title" = "Negeren";
+
+/* Message displayed next to an incoming friend request. */
+"incoming.friend.request.format" = "%@ heeft je een vriendschapsverzoek gestuurd";
 
 /* Title of the bottom sheet that is presented only once to explain the moments feature. */
 "introducing.moments" = "Introductie van Momenten";
@@ -1507,6 +1535,12 @@
 /* Title of the daily moment notification. */
 "notification.daily.moment.title" = "Dagelijks Moment";
 
+/* Body of a notification for when a friend request is accepted. */
+"notification.friend.request.accept.body" = "%@ heeft je vriendschapsverzoek geaccepteerd";
+
+/* Body of a notification for a new friend request. */
+"notification.friend.request.body" = "%@ heeft je een vriendschapsverzoek gestuurd";
+
 /* Content for inviter notification. */
 "notification.invite.accepted.content" = "%@ heeft je uitnodiging voor HalloApp geaccepteerd 🎉";
 
@@ -1632,6 +1666,9 @@
 
 /* Title denoting something that is optional. */
 "optional.title" = "Optioneel";
+
+/* Message displayed next to an outgoing friend request. */
+"outgoing.friend.request.format" = "Je hebt %@ een vriendschapsverzoek gestuurd";
 
 /* button to launch photo and video library */
 "photo.and.video.library" = "Foto- & Videobibliotheek";
@@ -1930,11 +1967,17 @@
 /* Title of a button to remove a friend. */
 "remove.friend" = "Vriend verwijderen";
 
+/* Body of an alert that appears when removing a friend. */
+"remove.friend.body" = "%@ en jij kunnen elkaars posts niet langer zien.";
+
+/* Title of an alert that appears when removing a friend. */
+"remove.friend.title" = "%@ uit Vrienden verwijderen";
+
 /* Text for the action of removing a contact from the user's favorites list (title case). */
 "remove.from.favorites.title" = "Verwijderen uit Favorieten";
 
 /* Confirmation when a user was successfully removed from favorites. */
-"removed.user.from.favorites" = "%@ verwijderd uit favorieten";
+"removed.user.from.favorites" = "Verwijderd uit favorieten";
 
 /* Title of the button that both reports and blocks a user. */
 "report.and.block" = "Rapporteren en Blokkeren";
@@ -2004,6 +2047,9 @@
 
 /* Title of a button that shows all friend requests. */
 "see.all.requests" = "Alle verzoeken weergeven";
+
+/* Title of a button that displays the users friend list. */
+"see.my.network" = "Bekijk Mijn Netwerk";
 
 /* Title of a button that shows sent friend requests. */
 "see.sent.requests" = "Verzonden verzoeken";
@@ -2333,10 +2379,13 @@
 "user.chat.typing" = "%@ is aan het typen...";
 
 /* Option when user taps more on profile page */
-"user.option.block" = "Blokkeren op HalloApp";
+"user.option.block" = "Blokkeren";
+
+/* Option when User clicks on the username on profile page and this can let the user copy the username */
+"user.option.copy.username" = "Gebruikersnaam kopiëren";
 
 /* Option when user taps more on profile page */
-"user.option.unblock" = "Deblokkeren op HalloApp";
+"user.option.unblock" = "Deblokkeren";
 
 /* Button to confirm unblocking user via profile page */
 "user.unblock" = "Deblokkeren";
