--- a/Halloapp/fa.lproj/Localizable.strings
+++ b/Halloapp/fa.lproj/Localizable.strings
@@ -887,6 +887,18 @@
 /* Possible Feed Privacy setting value. Keep short. */
 "feed.privacy.value.n.selected" = "feed.privacy.value.n.selected";
 
+/* Body text of welcome post shown to users who have no contacts and no content (zero zone) in their feed */
+"feed.welcome.post.body.1" = "جایگاه خصوصی بدون هیچ اینفلوئنسر و هیچ تبلیغی. فقط شما و کسانی که برایتان مهم هستند.";
+
+/* Body text of welcome post shown to users who have no contacts and no content (zero zone) in their feed */
+"feed.welcome.post.body.2" = "ببینید چه کسی اکنون در هالواپ است، و دوستان و آشنایانتان را دعوت کنید.";
+
+/* Title of welcome post shown to users who have no contacts and no content (zero zone) in their feed */
+"feed.welcome.post.title.1" = "به هالواپ خوش‌آمدید!‌ شبکه اجتماعی خصوصی شما";
+
+/* Title of welcome post shown to users who have no contacts and no content (zero zone) in their feed */
+"feed.welcome.post.title.2" = "چه کسی میتوانند پست‌هایم را ببیند؟";
+
 /* Text for 'more' cell prompting users to open the invite screen */
 "feedInviteCarousel.searchPrompt" = "جستجوی دوستان و آشنایان";
 
@@ -904,6 +916,12 @@
 
 /* Explains that as more contacts join the app, they will appear in this list automatically. */
 "fellow.contacts.will.arrive" = "مخاطبین تلفن شما که در هالواپ هستنید به طور خودکار اینجا نشان داده میشوند.";
+
+/* Message displayed in the activity center when someone accepts your friend request. */
+"friend.activity.incoming.accepted" = "<$author$> دعوت دوستی شما را پذیرفت";
+
+/* Message displayed in the activity center when there's an incoming friend request. */
+"friend.activity.incoming.pending" = "<$author$> برای شما دعوت دوستی فرستاده است";
 
 /* Title of a header that appears before a list of contacts that can be invited to register. */
 "friend.invite.header.title" = "دیگر چه کسی را میخواهید اینجا مشاهده کنید؟";
@@ -1511,6 +1529,12 @@
 /* Title of the daily moment notification. */
 "notification.daily.moment.title" = "لحظه روزانه";
 
+/* Body of a notification for when a friend request is accepted. */
+"notification.friend.request.accept.body" = "@% دعوت دوستی شما را پذیرفت";
+
+/* Body of a notification for a new friend request. */
+"notification.friend.request.body" = "@% به شما دعوت دوستی فرستاده است";
+
 /* Content for inviter notification. */
 "notification.invite.accepted.content" = "%@ دعوت شما را به هالواپ پذیرفت";
 
@@ -1937,6 +1961,12 @@
 /* Title of a button to remove a friend. */
 "remove.friend" = "حذف دوست";
 
+/* Body of an alert that appears when removing a friend. */
+"remove.friend.body" = "شما و @% دیگر نمیتوانید پست‌های همدیگر را ببینید.";
+
+/* Title of an alert that appears when removing a friend. */
+"remove.friend.title" = "حذف @% از دوستان";
+
 /* Text for the action of removing a contact from the user's favorites list (title case). */
 "remove.from.favorites.title" = "حذف کردن از محبوب‌ها";
 
@@ -2011,6 +2041,9 @@
 
 /* Title of a button that shows all friend requests. */
 "see.all.requests" = "مشاهده همه درخواست‌ها";
+
+/* Title of a button that displays the users friend list. */
+"see.my.network" = "مشاهده شبکه خود";
 
 /* Title of a button that shows sent friend requests. */
 "see.sent.requests" = "درخواست‌های فرستاده";
@@ -2158,6 +2191,9 @@
 
 /* Instructions for enabling notifications permissions */
 "settings.notifications.disabled.instructions" = "لطفاً اعلان‌ها را در تنظیمات آیفون فعال کنید.";
+
+/* Settings > Notifications: label for the toggle that turns new magic post notifications on or off. */
+"settings.notifications.magicposts" = "پست‌های جادویی";
 
 /* Settings > Notifications: label for the toggle that turns new moment notifications on or off. */
 "settings.notifications.moments" = "لحظه‌ها";
@@ -2317,6 +2353,9 @@
 
 /* Instructs user to tap a button (e.g., Tap “Go to Settings” below.) */
 "tutorial.tap.below" = "روی «%@» کلیک کنید.";
+
+/* Title of an alert when unblocking a user */
+"unblock.title" = "غیرمسدود کردن @%";
 
 /* Text for action label that lets the user accept messages from unknown contacts */
 "unknown.contact.accept.to.message" = "قبول کردن پیام";
