--- a/Halloapp/nl.lproj/Localizable.stringsdict
+++ b/Halloapp/nl.lproj/Localizable.stringsdict
@@ -401,9 +401,9 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>one</key>
-			<string>%d Contact</string>
+			<string>%d Gebruiker</string>
 			<key>other</key>
-			<string>%d Contacten</string>
+			<string>%d Gebruikers</string>
 			<key>zero</key>
 			<string>Geen</string>
 		</dict>
