--- a/Halloapp/tr.lproj/InfoPlist.strings
+++ b/Halloapp/tr.lproj/InfoPlist.strings
@@ -7,6 +7,9 @@
 /* Privacy - Contacts Usage Description */
 "NSContactsUsageDescription" = "Ailen ve arkadaşlarının gönderilerini görmek ve paylaşmak için HalloApp'in kişilerini, kendi sunucularına yüklemesine izin ver. ";
 
+/* Privacy - Location Always and When In Use Usage Description */
+"NSLocationAlwaysAndWhenInUseUsageDescription" = "Bu, yorumlarda ve sohbetlerde, mevcut konumuna göre sana yeni fotoğraf önerileri sunmamızı sağlar.";
+
 /* Privacy - Location When In Use Usage Description */
 "NSLocationWhenInUseUsageDescription" = "Bu, mevcut konumunu veya yakındaki yerleri yorumlarda ve sohbetlerde göndermeni sağlar.";
 
